# fast-link

./: .env.dist  .env.test  .gitignore  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
backend/: Dockerfile  Dockerfiletest
backend/app/: main.py
backend/app/api/routes/: auth_users.py  url.py  urls.py
backend/app/api/schemas/: url.py
backend/app/core/: config.py  logging_config.py  manager.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0abc32aa5db0_.py  5000306087a4_.py  9b5f54d67d1a_.py  d73abbdd5422_.py  dadb13e5cffd_.py  e3342c341d1d_.py  e7666ee4a38c_.py  f9073e260444_.py
backend/app/models/: __init__.py  url.py  user.py
backend/app/schemas/: url.py  user.py
backend/app/services/: cache.py  expiration.py  shortener.py  url_dependencies.py  url_helpers.py  url_utils.py
backend/scripts/: entrypoint.sh  entrypoint.test.sh
frontend/: Dockerfile  app.py  config.py  helpers.py  logging_config.py
frontend/core/: config.py
reports/: locust-test.html  pytest.html
reports/reports/: report.html
scripts/: deploy.sh
tests/: conftest.py  locustfile.py  test_api.py  test_dependencies.py  test_expiration.py  test_helpers.py  test_main.py  test_my_urls.py  test_shortener.py  test_url_stats.py
